--- a/modules/shared/files/tmux/tmux.conf
+++ b/modules/shared/files/tmux/tmux.conf
@@ -40,6 +40,7 @@ set -g @continuum-save-interval '15'
 
 # Configure the catppuccin plugin
 set -g @catppuccin_flavor "mocha"
+# set -g @catppuccin_flavor "latte"
 set -g @catppuccin_window_status_style "rounded"
 
 set -g status-right-length 100
