feat: add new user profile and mise, docker, homebrew updates
- Add kj-default-v2 profile for kangjun user
- Configure mise for runtime version management (node, bun, deno, uv, rust)
- Add docker tools (colima, docker, docker-buildx)
- Update homebrew casks: zen-browser -> zen, tailscale -> tailscale-app, add raycast
- Use determinate system nix, add backup file extension for home-manager
- Update ghostty config for kangjun user
- Update nvim lazy-lock.json with latest plugin versions

--- a/modules/shared/files/tmux/tmux.conf
+++ b/modules/shared/files/tmux/tmux.conf
@@ -153,3 +153,4 @@ bind C-v display-popup -E "tmux-file-picker --zoxide --dir-only"
 set -gq allow-passthrough on
 set -g visual-activity off
 
+set -sg escape-time 0
