--- a/modules/shared/files/ghostty/config
+++ b/modules/shared/files/ghostty/config
@@ -9,9 +9,10 @@ window-padding-x = 10
 window-padding-y = 10,0
 
 # font
-font-family = Cascadia Code NF Regular
-font-family = JetBrainsMono NFM Regular
-font-family = SF Mono Regular
+font-family = "JetBrainsMonoNL NFM"
+# font-family = "Noto Sans CJK KR" 
+font-family = "Monoplex KR"
+# font-family = SF Mono Regular
 macos-option-as-alt = true
 mouse-hide-while-typing = true
 font-size = 16
