feat: add Claude API usage monitor to tmux status bar
Add claude-usage script, catppuccin tmux module, and status bar integration

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/modules/shared/files/tmux/tmux.conf
+++ b/modules/shared/files/tmux/tmux.conf
@@ -93,6 +93,10 @@ set -g status-position top
 run '#{TMUX_PLUGIN_MANAGER_PATH}/tpm/tpm'
 
 
+# custom catppuccin modules (must be after tpm init)
+source -F "#{d:current_file}/custom_modules/claude_usage.conf"
+
+set -ag status-right "#{E:@catppuccin_status_claude_usage}"
 set -agF status-right "#{@catppuccin_status_gitmux}"
 
 # enable 256-colors
