feat: add workmux integration for opencode and tmux
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/modules/shared/files/tmux/tmux.conf
+++ b/modules/shared/files/tmux/tmux.conf
@@ -152,6 +152,9 @@ bind C-v display-popup -E "tmux-file-picker --zoxide --dir-only"
 
 # bind C-f display-popup -h 60% -w 60% -E "tmux-file-picker"
 
+# Workmux dashboard
+bind C-s display-popup -h 30 -w 100 -E "workmux dashboard"
+
 
 # Support image.nvim
 set -gq allow-passthrough on
