refactor: update tmux window naming and config
Disable auto-rename, replace nerd-font plugin with manual catppuccin window text, and open new windows adjacent to current.

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/modules/shared/files/tmux/tmux.conf
+++ b/modules/shared/files/tmux/tmux.conf
@@ -14,7 +14,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 #
 # theme / style
 set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+# set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'alexwforsythe/tmux-which-key'  # prefix + space
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-battery'
@@ -42,6 +42,8 @@ set -g @continuum-save-interval '15'
 set -g @catppuccin_flavor "mocha"
 # set -g @catppuccin_flavor "latte"
 set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_text " #W"
+set -g @catppuccin_window_current_text " #W"
 
 set -g status-right-length 100
 set -g status-left-length 100
@@ -64,6 +66,10 @@ set -g pane-base-index 1
 
 # renumber when window is closed
 set -g renumber-window on
+
+# keep manually set window names (don't auto-rename by pane command)
+set -g automatic-rename off
+set -g allow-rename off
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
@@ -107,7 +113,7 @@ set -ag terminal-overrides ',xterm-256color:TC'
 set -g status-style "bg=default"
 
 # Set new panes to open in current directory
-bind c new-window -c "#{pane_current_path}"
+bind c new-window -a -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
